--- a/nginx-server.conf
+++ b/nginx-server.conf
@@ -1,7 +1,7 @@
 # 服务器 Nginx 配置
 server {
     listen 80;
-    server_name task.tudou168.com;  # ← 改为你的域名
+    server_name task.tudou168.com;
 
     # 日志
     access_log /var/log/nginx/todolist.access.log;
@@ -20,9 +20,9 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # 后端 API 代理
-    location /api {
-        proxy_pass http://127.0.0.1:8000/api;
+    # ✅ 修复：后端 API 代理（移除尾部斜杠，避免路径重复）
+    location /api/ {
+        proxy_pass http://127.0.0.1:8000/;  # ← 注意这里改为 / 而不是 /api
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -37,7 +37,8 @@ server {
 
     # 健康检查
     location /health {
-        proxy_pass http://127.0.0.1:8000/health;
         access_log off;
+        return 200 "healthy\n";
+        add_header Content-Type text/plain;
     }
 }
