修复: 修改 VITE_API_URL 为空，解决 API 路径重复问题

--- a/Dockerfile.frontend.prod
+++ b/Dockerfile.frontend.prod
@@ -14,6 +14,10 @@ RUN npm ci
 # 复制源代码
 COPY . .
 
+# ✅ 添加这两行（在第15行之后）
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
+
 # 构建生产版本
 RUN npm run build
 
